last updated version befor JDBC